--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -7,3 +7,7 @@ resources:
   - ./hajimari/ks.yaml
   - ./pvc-ssd.yaml
   - ./nfs-subdir-external-ssd
+  - ./sonarr
+  - ./radarr
+  - ./overseerr
+  - ./jackett
