--- a/kubernetes/apps/default/bazarr/bazarr.yaml
+++ b/kubernetes/apps/default/bazarr/bazarr.yaml
@@ -37,6 +37,8 @@ spec:
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
           external-dns.alpha.kubernetes.io/target: ipv4.${SECRET_DOMAIN}
+          hajimari.io/enable: "true"
+          hajimari.io/group: Media
         hosts:
           - host: bazarr.${SECRET_DOMAIN}
             paths:
