--- a/kubernetes/apps/default/jackett/jackett.yaml
+++ b/kubernetes/apps/default/jackett/jackett.yaml
@@ -28,6 +28,7 @@ spec:
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
           hajimari.io/enable: "true"
+          hajimari.io/group: Media
         hosts:
           - host: &host jackett.${SECRET_DOMAIN}
             paths:
