--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -37,6 +37,7 @@ spec:
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
           hajimari.io/enable: "true"
+          hajimari.io/group: Media
         hosts:
           - host: &host radarr.${SECRET_DOMAIN}
             paths:
