--- a/kubernetes/apps/default/sonarr/sonarr.yaml
+++ b/kubernetes/apps/default/sonarr/sonarr.yaml
@@ -35,6 +35,7 @@ spec:
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
           hajimari.io/enable: "true"
+          hajimari.io/group: Media
         hosts:
           - host: &host sonarr.${SECRET_DOMAIN}
             paths:
