--- a/kubernetes/apps/default/hajimari/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hajimari/app/helmrelease.yaml
@@ -31,11 +31,11 @@ spec:
       darkTheme: espresso
       alwaysTargetBlank: true
       showGreeting: false
-      showAppGroups: false
-      showAppStatus: false
-      showBookmarkGroups: false
-      showGlobalBookmarks: false
-      showAppUrls: false
+      showAppGroups: true
+      showAppStatus: true
+      showBookmarkGroups: true
+      showGlobalBookmarks: true
+      showAppUrls: true
       defaultEnable: true
       namespaceSelector:
         matchNames:
