Update hajimari icons
Signed-off-by: Sean Norwood <norwood.sean@gmail.com>

--- a/kubernetes/apps/default/sonarr/sonarr.yaml
+++ b/kubernetes/apps/default/sonarr/sonarr.yaml
@@ -36,6 +36,7 @@ spec:
           cert-manager.io/cluster-issuer: letsencrypt-production
           hajimari.io/enable: "true"
           hajimari.io/group: Media
+          hajimari.io/icon: mdi:television-classic
         hosts:
           - host: &host sonarr.${SECRET_DOMAIN}
             paths:
