--- a/kubernetes/apps/default/bazarr/bazarr.yaml
+++ b/kubernetes/apps/default/bazarr/bazarr.yaml
@@ -39,6 +39,7 @@ spec:
           external-dns.alpha.kubernetes.io/target: ipv4.${SECRET_DOMAIN}
           hajimari.io/enable: "true"
           hajimari.io/group: Media
+          hajimari.io/icon: mdi:subtitles
         hosts:
           - host: bazarr.${SECRET_DOMAIN}
             paths:
