--- a/kubernetes/apps/default/jackett/jackett.yaml
+++ b/kubernetes/apps/default/jackett/jackett.yaml
@@ -29,6 +29,7 @@ spec:
           cert-manager.io/cluster-issuer: letsencrypt-production
           hajimari.io/enable: "true"
           hajimari.io/group: Media
+          hajimari.io/icon: mdi:rss
         hosts:
           - host: &host jackett.${SECRET_DOMAIN}
             paths:
