--- a/kubernetes/apps/default/overseerr/overseerr.yaml
+++ b/kubernetes/apps/default/overseerr/overseerr.yaml
@@ -49,6 +49,7 @@ spec:
           cert-manager.io/cluster-issuer: letsencrypt-production
           hajimari.io/enable: "true"
           hajimari.io/group: Media
+          hajimari.io/icon: mdi:movie
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
           external-dns/is-public: "true"
         hosts:
