--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -38,6 +38,7 @@ spec:
           cert-manager.io/cluster-issuer: letsencrypt-production
           hajimari.io/enable: "true"
           hajimari.io/group: Media
+          hajimari.io/icon: mdi:movie
         hosts:
           - host: &host radarr.${SECRET_DOMAIN}
             paths:
