--- a/kubernetes/apps/default/tubearchivist/tubearchivist.yaml
+++ b/kubernetes/apps/default/tubearchivist/tubearchivist.yaml
@@ -64,6 +64,9 @@ spec:
         ingressClassName: nginx
         annotations:
           cert-manager.io/cluster-issuer: "letsencrypt-production"
+          hajimari.io/enable: "true"
+          hajimari.io/group: Media
+          hajimari.io/icon: mdi:youtube
         hosts:
           - host: &host tubearchivist.${SECRET_DOMAIN}
             paths:
