--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -29,7 +29,7 @@ spec:
     image:
       repository: lscr.io/linuxserver/radarr
       pullPolicy: IfNotPresent
-      tag: version-4.5.2.7388
+      tag: nightly-version-4.6.1.7456
     ingress:
       main:
         enabled: true
