Update radarr pvc storage class
Signed-off-by: Sean Norwood <norwood.sean@gmail.com>

--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -54,7 +54,7 @@ spec:
     persistence:
       config:
         enabled: true
-        storageClass: nfs-client-ssd
+        # storageClass: nfs-client-ssd
       vids:
         enabled: true
         mountPath: /data
