--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -54,7 +54,7 @@ spec:
     persistence:
       config:
         enabled: true
-        # storageClass: nfs-client-ssd
+        storageClass: local-path
       vids:
         enabled: true
         mountPath: /data
