Update nginx replicas
Signed-off-by: Sean Norwood <norwood.sean@gmail.com>

--- a/kubernetes/apps/networking/ingress-nginx/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/ingress-nginx/app/helmrelease.yaml
@@ -27,6 +27,7 @@ spec:
     keepHistory: false
   values:
     controller:
+      replicaCount: 2
       extraEnvs:
         - name: TZ
           value: "${TIMEZONE}"
