--- a/kubernetes/apps/default/overseerr/overseerr.yaml
+++ b/kubernetes/apps/default/overseerr/overseerr.yaml
@@ -39,7 +39,7 @@ spec:
       config:
         enabled: true
         mountPath: /app/config
-        # storageClass: nfs-client-ssd
+        storageClass: local-path
         size: 10Gi
     ingress:
       main:
