Enable hubble hajimari
Signed-off-by: Sean Norwood <norwood.sean@gmail.com>

--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -59,7 +59,7 @@ spec:
         ingress:
           enabled: true
           annotations:
-            hajimari.io/enable: true
+            hajimari.io/enable: "true"
           className: nginx
           hosts:
             - &host "hubble.${SECRET_DOMAIN}"
