Enable kube system hajimari
Signed-off-by: Sean Norwood <norwood.sean@gmail.com>

--- a/kubernetes/apps/default/hajimari/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hajimari/app/helmrelease.yaml
@@ -41,6 +41,7 @@ spec:
         matchNames:
           - default
           - monitoring
+          - kube-system
       globalBookmarks:
         - group: Default
           bookmarks:
