Add ha icon to hajimari
Signed-off-by: Sean Norwood <norwood.sean@gmail.com>

--- a/kubernetes/apps/default/hajimari/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hajimari/app/helmrelease.yaml
@@ -80,6 +80,7 @@ spec:
               icon: mdi:server
             - name: Home Assistant
               url: http://192.168.1.136:8123/
+              icon: mdi:home-assistant
     ingress:
       main:
         enabled: true
