Add scrape configs for opnsense
Signed-off-by: Sean Norwood <norwood.sean@gmail.com>

--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -57,6 +57,11 @@ spec:
               replacement: $1
               sourceLabels: ["__meta_kubernetes_pod_node_name"]
               targetLabel: kubernetes_node
+        additionalScrapeConfigs:
+          - job_name: OPNSense
+            static_configs:
+              - targets:
+                  - 192.168.1.1:9100/metrics
     kubelet:
       enabled: true
       serviceMonitor:
