Add scrape configs for opnsense
Signed-off-by: Sean Norwood <norwood.sean@gmail.com>

--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -58,10 +58,9 @@ spec:
               sourceLabels: ["__meta_kubernetes_pod_node_name"]
               targetLabel: kubernetes_node
         additionalScrapeConfigs:
-          - job_name: OPNSense
+          - job_name: "opnsense"
             static_configs:
-              - targets:
-                  - 192.168.1.1:9100
+              - targets: ["192.168.1.1:9100"]
     kubelet:
       enabled: true
       serviceMonitor:
