--- a/kubernetes/apps/default/hajimari/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hajimari/app/helmrelease.yaml
@@ -76,10 +76,10 @@ spec:
         - group: Homelab
           bookmarks:
             - name: Opnsense
-              url: https://opnsense.local.lan/
+              url: https://opnsense.stiforr.com:8080/
               icon: mdi:router-wireless
             - name: Proxmix
-              url: https://proxmox.local.lan:8006/
+              url: https://proxmox.stiforr.com:8006/
               icon: mdi:server
             - name: Home Assistant
               url: http://192.168.1.136:8123/
