Update bazarr pvc
Signed-off-by: Sean Norwood <norwood.sean@gmail.com>

--- a/kubernetes/apps/default/bazarr/bazarr.yaml
+++ b/kubernetes/apps/default/bazarr/bazarr.yaml
@@ -55,7 +55,7 @@ spec:
         storageClass: local-path
       vids:
         enabled: true
-        mountPath: /vids
+        mountPath: /data
         accessMode: ReadWriteMany
         existingClaim: media-pvc-ssd
         storageClass: "nfs-client-ssd"
