Add call.com link
Signed-off-by: Sean Norwood <norwood.sean@gmail.com>

--- a/kubernetes/apps/default/hajimari/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hajimari/app/helmrelease.yaml
@@ -43,6 +43,11 @@ spec:
           - monitoring
           - kube-system
       globalBookmarks:
+        - group: Work
+          bookmarks:
+            - name: Cal.com
+              url: https://cal.com
+              icon: mdi:calendar
         - group: Media
           bookmarks:
             - name: Lidarr
