--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -27,9 +27,9 @@ spec:
       PUID: 1000
       PGID: 1000
     image:
-      repository: lscr.io/linuxserver/radarr
+      repository: linuxserver/radarr
       pullPolicy: IfNotPresent
-      tag: nightly-version-4.6.1.7456
+      tag: 4.6.4
     ingress:
       main:
         enabled: true
