Test external IP with plex
Signed-off-by: Sean Norwood <norwood.sean@gmail.com>

--- a/kubernetes/apps/default/plex-ingress/ingress.yaml
+++ b/kubernetes/apps/default/plex-ingress/ingress.yaml
@@ -8,7 +8,9 @@ spec:
     - port: 32400
       targetPort: 32400
       protocol: TCP
-  type: LoadBalancer
+  externalIPs:
+    - 192.168.1.150
+  # type: LoadBalancer
   externalTrafficPolicy: Local
 ---
 kind: Endpoints
