--- a/kubernetes/apps/default/plex-ingress/ingress.yaml
+++ b/kubernetes/apps/default/plex-ingress/ingress.yaml
@@ -11,7 +11,7 @@ spec:
       protocol: TCP
   type: ClusterIP
   ClusterIP: None
-  externalTrafficPolicy: Local
+  # externalTrafficPolicy: Local
 ---
 kind: Endpoints
 apiVersion: v1
