--- a/kubernetes/apps/default/plex-ingress/ingress.yaml
+++ b/kubernetes/apps/default/plex-ingress/ingress.yaml
@@ -33,7 +33,7 @@ metadata:
   namespace: default
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-production
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
     hajimari.io/enable: "true"
     hajimari.io/group: Media
     nginx.ingress.kubernetes.io/app-root: /web
