--- a/kubernetes/apps/default/ha-ingress/ingress.yaml
+++ b/kubernetes/apps/default/ha-ingress/ingress.yaml
@@ -24,7 +24,9 @@ subsets:
       - ip: 192.168.1.136
     ports:
       - port: 8123
+        name: http
       - port: 8181
+        name: tautulli
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
