--- a/kubernetes/apps/default/ha-ingress/ingress.yaml
+++ b/kubernetes/apps/default/ha-ingress/ingress.yaml
@@ -6,9 +6,11 @@ metadata:
 spec:
   ports:
     - port: 8123
+      name: http
       targetPort: 8123
       protocol: TCP
     - port: 8181
+      name: tautulli
       targetPort: 8181
       protocol: TCP
   type: LoadBalancer
