--- a/kubernetes/apps/default/tautulli-ingress/ingress.yaml
+++ b/kubernetes/apps/default/tautulli-ingress/ingress.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: home-assistant-ingress
+  name: tautulli-ingress
   namespace: default
 spec:
   ports:
-    - port: 8123
+    - port: 8181
       name: http
-      targetPort: 8123
+      targetPort: 8181
       protocol: TCP
   type: LoadBalancer
   externalTrafficPolicy: Local
@@ -15,36 +15,36 @@ spec:
 kind: Endpoints
 apiVersion: v1
 metadata:
-  name: home-assistant-ingress
+  name: tautulli-ingress
   namespace: default
 subsets:
   - addresses:
       - ip: 192.168.1.136
     ports:
-      - port: 8123
+      - port: 8181
         name: http
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: home-assistant-ingress
+  name: tautulli-ingress
   namespace: default
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-production
 spec:
   rules:
-    - host: home-assistant.${SECRET_DOMAIN}
+    - host: tautulli.${SECRET_DOMAIN}
       http:
         paths:
           - pathType: Prefix
             path: "/"
             backend:
               service:
-                name: home-assistant-ingress
+                name: tautulli-ingress
                 port:
-                  number: 8123
+                  number: 8181
   tls:
     - hosts:
-        - home-assistant.${SECRET_DOMAIN}
-      secretName: home-assistant-tls
+        - tautulli.${SECRET_DOMAIN}
+      secretName: tautulli-tls
   ingressClassName: nginx
