--- a/kubernetes/apps/default/sonarr/sonarr.yaml
+++ b/kubernetes/apps/default/sonarr/sonarr.yaml
@@ -26,8 +26,8 @@ spec:
       PUID: 568
       PGID: 568
     image:
-      repository: ghcr.io/linuxserver/sonarr
-      tag: develop-version-4.0.0.535
+      repository: linuxserver/sonarr
+      tag: develop-version-4.0.0.646
     ingress:
       main:
         enabled: true
