--- a/kubernetes/apps/monitoring/kubernetes-dashboard/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kubernetes-dashboard/app/helmrelease.yaml
@@ -49,3 +49,7 @@ spec:
       enabled: true
     serviceMonitor:
       enabled: false
+    nginx:
+      enabled: false
+    cert-manager:
+      enabled: false
