Update k8s dashboard cert issuer
Signed-off-by: Sean Norwood <norwood.sean@gmail.com>

--- a/kubernetes/apps/monitoring/kubernetes-dashboard/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kubernetes-dashboard/app/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
           hajimari.io/icon: mdi:kubernetes
         issuer:
           name: letsencrypt-production
-          scope: disabled
+          scope: cluster
         hosts:
           - localhost
           - kubernetes.${SECRET_DOMAIN}
