--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -29,7 +29,7 @@ spec:
     image:
       repository: linuxserver/radarr
       pullPolicy: IfNotPresent
-      tag: nightly-5.0.1.7978-ls3
+      tag: nightly-version-5.0.2.8096
     ingress:
       main:
         enabled: true
