--- a/kubernetes/apps/default/overseerr/overseerr.yaml
+++ b/kubernetes/apps/default/overseerr/overseerr.yaml
@@ -30,7 +30,7 @@ spec:
         cpu: 250m
         memory: 512Mi
     image:
-      repository: ghcr.io/sct/overseerr
+      repository: sctx/overseerr
       tag: be047427df62e480fc9b69cb93258837ed72bcf4
       pullPolicy: IfNotPresent
     env:
