disable lidarr ingress

--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -15,7 +15,7 @@ resources:
   # - ./ha-ingress
   - ./bazarr
   # - ./plane-ingress
-  - ./lidarr-ingress
+  # - ./lidarr-ingress
   # - ./filebrowser-ingress
   # - ./plex-ingress
   # - ./tautulli-ingress
