--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
-  - ./echo-server/ks.yaml
+  #- ./echo-server/ks.yaml
   - ./hajimari/ks.yaml
   - ./pvc-ssd.yaml
   - ./nfs-subdir-external-ssd
@@ -11,9 +11,9 @@ resources:
   - ./radarr
   - ./overseerr
   - ./jackett
-  - ./tubearchivist
+  #- ./tubearchivist
   # - ./ha-ingress
-  - ./bazarr
+  #- ./bazarr
   # - ./plane-ingress
   # - ./lidarr-ingress
   # - ./filebrowser-ingress
