--- a/kubernetes/apps/default/ptero-ingress/ingress.yaml
+++ b/kubernetes/apps/default/ptero-ingress/ingress.yaml
@@ -2,20 +2,19 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ptero-ingress
-  namespace: default
+  namespace: applications
 spec:
   ports:
-    - port: 80
-      targetPort: 80
+    - name: "http"
       protocol: TCP
-  type: LoadBalancer
-  externalTrafficPolicy: Local
+      port: 80
+      targetPort: 80
 ---
 kind: Endpoints
 apiVersion: v1
 metadata:
   name: ptero-ingress
-  namespace: default
+  namespace: applications
 subsets:
   - addresses:
       - ip: 192.168.1.113
@@ -26,25 +25,24 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ptero-ingress
-  namespace: default
+  namespace: applications
   annotations:
+    kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-production
-    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
-    hajimari.io/enable: "true"
+    external-dns.alpha.kubernetes.io/exclude: true
 spec:
+  tls:
+    - hosts:
+        - "ptero.${SECRET_DOMAIN}"
+      secretName: ptero-ingress-web-tls
   rules:
-    - host: ptero.${SECRET_DOMAIN}
+    - host: "ptero.${SECRET_DOMAIN}"
       http:
         paths:
-          - pathType: Prefix
-            path: "/"
+          - path: /
+            pathType: Prefix
             backend:
               service:
                 name: ptero-ingress
                 port:
-                  number: 80
-  tls:
-    - hosts:
-        - ptero.${SECRET_DOMAIN}
-      secretName: ptero-tls
-  ingressClassName: nginx
+                  name: http
