--- a/kubernetes/apps/default/ptero-ingress/ingress.yaml
+++ b/kubernetes/apps/default/ptero-ingress/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ptero-ingress
-  namespace: applications
+  namespace: default
 spec:
   ports:
     - name: "http"
@@ -14,7 +14,7 @@ kind: Endpoints
 apiVersion: v1
 metadata:
   name: ptero-ingress
-  namespace: applications
+  namespace: default
 subsets:
   - addresses:
       - ip: 192.168.1.113
@@ -25,7 +25,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ptero-ingress
-  namespace: applications
+  namespace: default
   annotations:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-production
